update to z3 demo

--- a/z3.ipynb
+++ b/z3.ipynb
@@ -84,87 +84,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Create the problem definitions, storing them in value kernel for later use"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "### Problem - Price Optimised Oil Purchasing\r\n",
-       "\r\n",
-       "In this example, we have two  countries that produce crude oil which we refine into three end-products: gasoline, jet fuel, and lubricant. The crude oil from each country yields different quantities of end-products once the oil is refined:\r\n",
-       "\r\n",
-       "|            | Saudi Arabia  | Venezuela      |\r\n",
-       "|---         | ---           | ---            |\r\n",
-       "| Cost       | $20 / barrel  | $15 / barrel   |\r\n",
-       "| Max Order  | 9000 barrels  | 6000 barrels   |\r\n",
-       "| Refining % | 30% gasolene  | 40% gasolene   |\r\n",
-       "|            | 40% jet fuel  | 20% jet fuel   |\r\n",
-       "|            | 20% lubricant | 30% lubricant  |\r\n",
-       "|            | 10% waste     | 10% waste      |\r\n",
-       "\r\n",
-       "Given we need to produce the following volume of refined end-product:\r\n",
-       "\r\n",
-       "| Product   | Amount (barrels) |\r\n",
-       "| ---       | ---              |\r\n",
-       "| Gasolene  | 1900             |\r\n",
-       "| Jet Fuel  | 1500             |\r\n",
-       "| Lubricant | 500              |\r\n",
-       "\r\n",
-       " What is the most cost efficient purchase strategy of crude oil from Saudi Arabia and Venezuela?\r\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#!value --name OptimizeOilPurchasingPrice\n",
-    "### Problem - Price Optimised Oil Purchasing\n",
-    "\n",
-    "In this example, we have two  countries that produce crude oil which we refine into three end-products: gasoline, jet fuel, and lubricant. The crude oil from each country yields different quantities of end-products once the oil is refined:\n",
-    "\n",
-    "|            | Saudi Arabia  | Venezuela      |\n",
-    "|---         | ---           | ---            |\n",
-    "| Cost       | $20 / barrel  | $15 / barrel   |\n",
-    "| Max Order  | 9000 barrels  | 6000 barrels   |\n",
-    "| Refining % | 30% gasolene  | 40% gasolene   |\n",
-    "|            | 40% jet fuel  | 20% jet fuel   |\n",
-    "|            | 20% lubricant | 30% lubricant  |\n",
-    "|            | 10% waste     | 10% waste      |\n",
-    "\n",
-    "Given we need to produce the following volume of refined end-product:\n",
-    "\n",
-    "| Product   | Amount (barrels) |\n",
-    "| ---       | ---              |\n",
-    "| Gasolene  | 1900             |\n",
-    "| Jet Fuel  | 1500             |\n",
-    "| Lubricant | 500              |\n",
-    "\n",
-    " What is the most cost efficient purchase strategy of crude oil from Saudi Arabia and Venezuela?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -192,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -228,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -244,7 +165,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"f560f6bef00c484e9e8904de6e9f0db0\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-4o\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;f560f6bef00c484e9e8904de6e9f0db0&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"72f796c91b4046c4a19d5c604adcead8\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-4o\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;72f796c91b4046c4a19d5c604adcead8&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -282,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -466,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -515,6 +436,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create the problem definitions, storing them in value kernel for later use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "### Problem - Price Optimised Oil Purchasing\n",
+       "\n",
+       "In this example, we have two  countries that produce crude oil which we refine into three end-products: gasoline, jet fuel, and lubricant. The crude oil from each country yields different quantities of end-products once the oil is refined:\n",
+       "\n",
+       "|            | Saudi Arabia  | Venezuela      |\n",
+       "|---         | ---           | ---            |\n",
+       "| Cost       | $20 / barrel  | $15 / barrel   |\n",
+       "| Max Order  | 9000 barrels  | 6000 barrels   |\n",
+       "| Refining % | 30% gasolene  | 40% gasolene   |\n",
+       "|            | 40% jet fuel  | 20% jet fuel   |\n",
+       "|            | 20% lubricant | 30% lubricant  |\n",
+       "|            | 10% waste     | 10% waste      |\n",
+       "\n",
+       "Given we need to produce the following volume of refined end-product:\n",
+       "\n",
+       "| Product   | Amount (barrels) |\n",
+       "| ---       | ---              |\n",
+       "| Gasolene  | 1900             |\n",
+       "| Jet Fuel  | 1500             |\n",
+       "| Lubricant | 500              |\n",
+       "\n",
+       " What is the most cost efficient purchase strategy of crude oil from Saudi Arabia and Venezuela?\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#!value --name OptimizeOilPurchasingPrice\n",
+    "### Problem - Price Optimised Oil Purchasing\n",
+    "\n",
+    "In this example, we have two  countries that produce crude oil which we refine into three end-products: gasoline, jet fuel, and lubricant. The crude oil from each country yields different quantities of end-products once the oil is refined:\n",
+    "\n",
+    "|            | Saudi Arabia  | Venezuela      |\n",
+    "|---         | ---           | ---            |\n",
+    "| Cost       | $20 / barrel  | $15 / barrel   |\n",
+    "| Max Order  | 9000 barrels  | 6000 barrels   |\n",
+    "| Refining % | 30% gasolene  | 40% gasolene   |\n",
+    "|            | 40% jet fuel  | 20% jet fuel   |\n",
+    "|            | 20% lubricant | 30% lubricant  |\n",
+    "|            | 10% waste     | 10% waste      |\n",
+    "\n",
+    "Given we need to produce the following volume of refined end-product:\n",
+    "\n",
+    "| Product   | Amount (barrels) |\n",
+    "| ---       | ---              |\n",
+    "| Gasolene  | 1900             |\n",
+    "| Jet Fuel  | 1500             |\n",
+    "| Lubricant | 500              |\n",
+    "\n",
+    " What is the most cost efficient purchase strategy of crude oil from Saudi Arabia and Venezuela?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Context Setting\n",
     "\n",
     "The following cells allow you to set the context for the Z3 problem-solving. You have two options:\n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -568,78 +568,42 @@
     {
      "data": {
       "text/plain": [
-       "Sure, Geeno. Let's solve the problem of optimizing the cost of purchasing crude oil from Saudi Arabia and Venezuela to meet the specified end-product requirements using Z3.\n",
+       "Hi Geeno,\n",
        "\n",
-       "The given information can be summarized as follows:\n",
-       "1. Crude oil costs:\n",
-       "   - Saudi Arabia: $20 per barrel\n",
-       "   - Venezuela: $15 per barrel\n",
-       "\n",
-       "2. Maximum order limits:\n",
-       "   - Saudi Arabia: 9000 barrels\n",
-       "   - Venezuela: 6000 barrels\n",
-       "\n",
-       "3. Refinement percentages:\n",
-       "   - Saudi Arabia: 30% gasoline, 40% jet fuel, 20% lubricant, 10% waste\n",
-       "   - Venezuela: 40% gasoline, 20% jet fuel, 30% lubricant, 10% waste\n",
-       "\n",
-       "4. Required end-products:\n",
-       "   - Gasoline: 1900 barrels\n",
-       "   - Jet Fuel: 1500 barrels\n",
-       "   - Lubricant: 500 barrels\n",
-       "\n",
-       "Our objective is to minimize the cost while meeting the end-product requirements.\n",
-       "\n",
-       "Here's the C# code using the Z3.Linq library to solve this problem:\n",
+       "Here is the optimal crude oil purchase strategy to meet your requirements at the lowest cost using Z3:\n",
        "\n",
        "```csharp\n",
        "using System;\n",
+       "using System.Globalization;\n",
        "using Z3.Linq;\n",
        "using Z3.Linq.Examples;\n",
        "\n",
        "using (var ctx = new Z3Context())\n",
        "{\n",
-       "    var theorem = from t in ctx.NewTheorem<Symbols<int, int>>()\n",
-       "                  where t.X1 <= 9000 // Saudi Arabia maximum order\n",
-       "                  where t.X2 <= 6000 // Venezuela maximum order\n",
-       "                  where (0.3 * t.X1 + 0.4 * t.X2) >= 1900 // Gasoline requirement\n",
-       "                  where (0.4 * t.X1 + 0.2 * t.X2) >= 1500 // Jet Fuel requirement\n",
-       "                  where (0.2 * t.X1 + 0.3 * t.X2) >= 500 // Lubricant requirement\n",
-       "                  orderby (20 * t.X1) + (15 * t.X2) // Minimize the total cost\n",
+       "    var theorem = from t in ctx.NewTheorem<Symbols<double, double>>()\n",
+       "                  where (0.3 * t.X1) + (0.4 * t.X2) >= 1900 // Gasolene requirement\n",
+       "                  where (0.4 * t.X1) + (0.2 * t.X2) >= 1500 // Jet Fuel requirement\n",
+       "                  where (0.2 * t.X1) + (0.3 * t.X2) >= 500 // Lubricant requirement\n",
+       "                  where t.X1 <= 9000 // Max Order for Saudi Arabia\n",
+       "                  where t.X2 <= 6000 // Max Order for Venezuela\n",
+       "                  orderby (20 * t.X1) + (15 * t.X2) // Minimize Cost\n",
        "                  select t;\n",
        "\n",
        "    var result = theorem.Solve();\n",
-       "\n",
-       "    Console.WriteLine($\"Optimal barrels to order from Saudi Arabia: {result.X1}\");\n",
-       "    Console.WriteLine($\"Optimal barrels to order from Venezuela: {result.X2}\");\n",
-       "    Console.WriteLine($\"Total Cost: ${20 * result.X1 + 15 * result.X2}\");\n",
+       "    \n",
+       "    Console.WriteLine($\"Barrels from Saudi Arabia: {result.X1}\");\n",
+       "    Console.WriteLine($\"Barrels from Venezuela: {result.X2}\");\n",
+       "    \n",
+       "    Console.WriteLine(string.Create(CultureInfo.CreateSpecificCulture(\"en-US\"), $\"Total Cost: {(20 * result.X1) + (15 * result.X2):C}\"));    \n",
        "}\n",
        "```\n",
        "\n",
-       "Let's run this code and find out the optimal solution for you.Geeno, I have found the optimal solution for purchasing crude oil to minimize costs while meeting the end-product requirements.\n",
+       "### Results\n",
+       "- **Barrels from Saudi Arabia:** \\( 2200 \\)\n",
+       "- **Barrels from Venezuela:** \\( 3100 \\)\n",
+       "- **Total Cost:** \\( \\$90,500.00 \\)\n",
        "\n",
-       "### Solution\n",
-       "1. **Optimal barrels to order from Saudi Arabia:** 2200 barrels\n",
-       "2. **Optimal barrels to order from Venezuela:** 3100 barrels\n",
-       "3. **Total Cost:** $90,500\n",
-       "\n",
-       "### Breakdown\n",
-       "- From **Saudi Arabia**:\n",
-       "  - \\(2200 \\times 0.3 = 660\\) barrels of gasoline\n",
-       "  - \\(2200 \\times 0.4 = 880\\) barrels of jet fuel\n",
-       "  - \\(2200 \\times 0.2 = 440\\) barrels of lubricant\n",
-       "\n",
-       "- From **Venezuela**:\n",
-       "  - \\(3100 \\times 0.4 = 1240\\) barrels of gasoline\n",
-       "  - \\(3100 \\times 0.2 = 620\\) barrels of jet fuel\n",
-       "  - \\(3100 \\times 0.3 = 930\\) barrels of lubricant\n",
-       "\n",
-       "By summing these up, we get:\n",
-       "- **Gasoline:** \\(660 + 1240 = 1900\\) barrels\n",
-       "- **Jet Fuel:** \\(880 + 620 = 1500\\) barrels\n",
-       "- **Lubricant:** \\(440 + 930 = 1370\\) barrels (exceeding the requirement)\n",
-       "\n",
-       "This solution ensures that all product requirements are met while minimizing the total cost. If you have any further questions, feel free to ask!"
+       "This strategy ensures you meet the required volumes of gasoline, jet fuel, and lubricant at the minimum possible cost."
       ]
      },
      "metadata": {},
@@ -649,9 +613,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal barrels to order from Saudi Arabia: 2200\n",
-      "Optimal barrels to order from Venezuela: 3100\n",
-      "Total Cost: $90500\n"
+      "Barrels from Saudi Arabia: 2200\n",
+      "Barrels from Venezuela: 3100\n",
+      "Total Cost: $90,500.00\n"
      ]
     }
    ],
